--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   .details { text-align: center;
 }
 }
-.centered-main-page-element {
+.centered-main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
