refactoring: add line break for selectors in css according to rule 3.8 in html-and-css

--- a/style.css
+++ b/style.css
@@ -39,10 +39,12 @@
   margin: 0;
   padding: 0px;
 }
-.task-list-elem, .heading {
+.task-list-elem,
+.heading {
   list-style: none;
 }
-.inp-elem,.btn{
+.inp-elem,
+.btn{
   outline: none;
 }
 .btn {
